tests/reference/ast-end_module_name-8436c0b.stderr
syntax error: End module name does not match module name
 --> tests/errors/end_module_name.f90:1:1 - 3:16
  |
1 |    module name1
  |    ^^^^^^^^^^^^...
...
  |
3 |    end module name2
  | ...^^^^^^^^^^^^^^^^ 
